# robo_dataview

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: artifact-publish-smoke.yml  official-export.yml  real-dataset-export-smoke.yml  visual-model-smoke.yml
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/api/routers/: annotations.py  datasets.py  episodes.py  exports.py  frames.py  jobs.py  rerun.py  search.py  users.py  versions.py
apps/api/schemas/: annotations.py  common.py  datasets.py  episodes.py  exports.py  frames.py  jobs.py  rerun.py  search.py  users.py  versions.py
apps/api/services/: annotation_service.py  artifact_storage.py  auth.py  embedding_service.py  episode_preview_service.py  export_service.py  filter_preset_service.py  full_text_search_service.py  hf_dataset_export.py  job_queue.py  job_service.py  lance_conversion.py  lance_export.py  lance_filter.py  lance_store.py  lerobot_io.py  pagination.py  pydantic_compat.py  rerun_service.py  user_context.py  (+3 more)
apps/web/: eslint.config.mjs  next.config.mjs  package.json  tsconfig.json
docs/: api_spec.md  architecture.md  deployment.md  plan.md  real_dataset_compatibility.md  roadmap.md  schema.md  ui_wireframe.md
scripts/: check_dataset_compat.py  convert_lerobot_to_lance.py  dev.sh  generate_skill_vocabulary_ts.py
workers/: __init__.py  embedding_worker.py  export_worker.py  job_runner.py  keyframe_extractor.py  rerun_cache_worker.py  thumbnail_worker.py  visual_embedding_worker.py  vlm_autolabel.py  vlm_provider.py
(+80 files in other folders)
