[project]
name = "robot-data-studio"
version = "0.1.0"
description = "Web-based Lance-native LeRobot dataset curation platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
lance = [
  "lancedb>=0.16.0",
  "pylance>=0.18.0",
  "pyarrow>=16.0.0",
]
rerun = [
  "rerun-sdk>=0.31.4,<0.32",
]
lerobot = [
  "lerobot>=0.4.0",
]
export = [
  "datasets>=2.19.0",
  "lerobot>=0.4.0",
  "pandas>=2.0.0",
  "pyarrow>=16.0.0",
]
queue = [
  "redis>=5.0.0",
  "rq>=1.16.0",
]
video = [
  "opencv-python-headless>=4.8.0",
]
storage = [
  "fsspec>=2024.2.0",
  "huggingface-hub>=0.23.0",
]
convert = [
  "lerobot2lance>=0.1.0",
]
ml = [
  "pillow>=10.0.0",
  "torch>=2.2.0",
  "transformers>=4.40.0",
]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["apps*", "packages*", "workers*"]
exclude = ["data*", "node_modules*"]

[tool.setuptools.package-data]
"packages.prompts" = ["*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
